--- a/feaprod8.html
+++ b/feaprod8.html
@@ -222,7 +222,7 @@
         </div>
 
         <div class="product-details">
-            <a href="FashionFusion.html" class="back-btn"><i class='bx bx-arrow-back'></i> Back</a> <!-- Updated -->
+            <a href="index.html" class="back-btn"><i class='bx bx-arrow-back'></i> Back</a> <!-- Updated -->
             <h2>Ivory Dream Flared Trousers</h2>
             <div class="product-price">₱ 399.00</div>
             <div class="product-description">
